--- a/gitops/applications/base/zitadel-post-config/kustomization.yaml
+++ b/gitops/applications/base/zitadel-post-config/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - zitadel-xplane-terraform-init.yaml
   - zitadel-xplane-terraform.yaml
   - vault-oidc-xplane-terraform.yaml
   - argocd-oidc-xplane-terraform.yaml
