--- a/gitops/argo-apps/base/zitadel-post-config.yaml
+++ b/gitops/argo-apps/base/zitadel-post-config.yaml
@@ -107,3 +107,6 @@ spec:
 
         - name: "k8s_oidc_post_config_output_secret"
           value: "${ARGOCD_ENV_security_zitadel_k8s_oidc_post_config_output_secret}"
+
+        - name: "zitadel_post_config_init_output_secret"
+          value: "zitadel-post-config-init-output"
