change in mapping

--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition.yaml
@@ -70,7 +70,7 @@ spec:
           - type: string
             string:
               type: Format
-              fmt: '%s-db-security-group'                    
+              fmt: '%s-security-group'                    
       - name: securityGroupRule
         base:
           apiVersion: ec2.aws.crossplane.io/v1alpha1
