--- a/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/templates/mr.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/templates/mr.yaml
@@ -7,14 +7,13 @@ metadata:
     organization: Infitx
     author: devops
 spec:
-  id: {{ .Values.name }}
+  id: {{ printf "%s-%s" .Values.namePrefix  .Values.name }}
   compositionSelector:
     matchLabels:
       provider: aws
       db: postgresql
       cluster: {{ .Values.namePrefix }}
   parameters:
-    namePrefix: {{ .Values.namePrefix }}
     region: {{ .Values.region }}
     engineVersion: "16"
     size: {{ .Values.size }}
