--- a/gitops/applications/overlays/rdbms_provider/rds/gitlab/gitlab-external-name-service.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/gitlab/gitlab-external-name-service.yaml
@@ -19,5 +19,5 @@ spec:
         apiVersion: rds.aws.crossplane.io/v1alpha1
         fieldPath: status.atProvider.endpoint
         kind: DBCluster
-        name: ${ARGOCD_ENV_gitlab_dbdeploy_name_prefix}
+        name: ${ARGOCD_ENV_gitlab_dbdeploy_name_prefix}-${ARGOCD_ENV_gitlab_dbdeploy_name_prefix}
       toFieldPath: spec.externalName
