--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition.yaml
@@ -51,8 +51,12 @@ spec:
           kind: SecurityGroup
           spec:
             forProvider:
-              ignoreIngress: true
-              ignoreEgress: true
+              ingress:
+              - fromPort: 5432
+                toPort: 5432
+                ipProtocol: tcp
+                ipRanges: 
+                    - cidrIp: "10.106.0.0/23"
               description: Security group for the db instance
               groupName: db-security-group
               region: eu-west-2
@@ -72,31 +76,9 @@ spec:
           - type: string
             string:
               type: Format
-              fmt: '%s-security-group'                    
-      - name: securityGroupRule
-        base:
-          apiVersion: ec2.aws.crossplane.io/v1alpha1
-          kind: SecurityGroupRule
-          spec:
-            forProvider:
-              description: Db ingress rule
-              region: eu-west-2
-              type: ingress
-              fromPort: 5432
-              toPort: 5432
-              protocol: tcp
-              cidrBlock: "10.106.0.0/23"
-              securityGroupIdSelector:
-                matchControllerRef: true
-            providerConfigRef:
-              name: crossplane-provider-config                
-        patches:
-        - type: PatchSet
-          patchSetName: metadata
-        - fromFieldPath: "spec.parameters.region"
-          toFieldPath: "spec.forProvider.region"
+              fmt: '%s-security-group'
         - fromFieldPath: "spec.parameters.vpcCidr"
-          toFieldPath: "spec.forProvider.cidrBlock"                          
+          toFieldPath: "spec.forProvider.ingress[0].ipRanges[0].cidrIp"                     
       - name: dbCluster
         base:
           apiVersion: rds.aws.crossplane.io/v1alpha1
