--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -138,5 +138,9 @@ praefect_db_storage_iops: "'5000'" # rds specific
 ceph_bucket_max_objects: "'1000000'"
 ceph_bucket_max_size: "10Gi"
 
+# Zitadel
+zitadel_postgres_rdbms_provider: "percona"
 zitadel_postgres_instance_size: "small"
 zitadel_postgres_storage_size: "'20'"
+zitadel_db_storage_type: "io1"   # rds specific
+zitadel_db_storage_iops: "'5000'" # rds specific
