--- a/gitops/applications/base/zitadel-post-config/zitadel-xplane-terraform-init.yaml
+++ b/gitops/applications/base/zitadel-post-config/zitadel-xplane-terraform-init.yaml
@@ -2,40 +2,29 @@
 apiVersion: tf.upbound.io/v1beta1
 kind: Workspace
 metadata:
-  name: zitadel-post-config
+  name: zitadel-post-config-init
   namespace: ${ARGOCD_ENV_zitadel_namespace}
 spec:
   forProvider:
     # Use any module source supported by terraform init -from-module.
     source: Remote
-    module: git::https://github.com/mojaloop/iac-modules.git//terraform/config-params/ccnew-config/zitadel?ref=${ARGOCD_ENV_terraform_modules_tag}
+    module: git::https://github.com/mojaloop/iac-modules.git//terraform/config-params/ccnew-config/zitadel-init?ref=${ARGOCD_ENV_terraform_modules_tag}
     # Variables can be specified inline as a list of key-value pairs or as an json object, or loaded from a ConfigMap or Secret.
-    vars:
-      - key: zitadel_fqdn
-        value: zitadel.${ARGOCD_ENV_zitadel_dns_subdomain}
-      - key: oidc_provider_group_claim_prefix
-        value: ${ARGOCD_ENV_zitadel_grant_prefix}
     env:
-      - name: TF_VAR_zitadel_org_id
-        secretKeyRef:
-          namespace: ${ARGOCD_ENV_zitadel_namespace}
-          name: ${ARGOCD_ENV_zitadel_post_config_init_output_secret}
-          key: zitadel_org_id
-
       - name: TF_CLI_CONFIG_FILE
         value: ./.terraformrc
 
   # All Terraform outputs are written to the connection secret.
   providerConfigRef:
-    name: zitadel-post-config
+    name: zitadel-post-config-init
   writeConnectionSecretToRef:
     namespace: ${ARGOCD_ENV_zitadel_namespace}
-    name: ${ARGOCD_ENV_zitadel_post_config_output_secret}
+    name: ${ARGOCD_ENV_zitadel_post_config_init_output_secret}
 ---
 apiVersion: tf.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
-  name: zitadel-post-config
+  name: zitadel-post-config-init
   namespace: ${ARGOCD_ENV_zitadel_namespace}
 spec:
   # Note that unlike most provider configs this one supports an array of
