--- a/gitops/argo-apps/base/netbird.yaml
+++ b/gitops/argo-apps/base/netbird.yaml
@@ -34,7 +34,7 @@ spec:
     targetRevision: ${ARGOCD_ENV_security_application_gitrepo_tag}
     path: gitops/applications/base/netbird
     plugin:
-      name: helmfile
+      name: envsubst
       env:
         - name: "zitadel_dns_subdomain"
           value: "${ARGOCD_ENV_security_zitadel_dns_subdomain}"
@@ -77,3 +77,9 @@ spec:
 
         - name: "zitadel_grant_prefix"
           value: "${ARGOCD_ENV_security_zitadel_zitadel_grant_prefix}"
+
+        - name: "netbird_datastore_encryption_key_secret"
+          value: "${ARGOCD_ENV_security_netbird_datastore_encryption_key_secret}"
+
+        - name: "netbird_datastore_encryption_key_secret_key"
+          value: "${ARGOCD_ENV_security_netbird_datastore_encryption_key_secret_key}"
