--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -14,9 +14,10 @@ crossplane_helm_version: "1.16.0"
 kubernetes_secret_generator_helm_version: "3.4.0"
 zitadel_helm_version: "8.5.0"
 cockroachdb_helm_version: "13.0.2"
-netbird_helm_version: "1.0.2"
-netbird_dashboard_helm_version: "1.0.0"
-netbird_image_version: "0.28.6"
+netbird_helm_version: "1.4.0"
+netbird_dashboard_helm_version: "1.4.0"
+netbird_image_version: "0.30.2"
+netbird_dashboard_image_version: "v2.6.1"
 stunner_gateway_operator_helm_version: "0.19.0"
 nexus_helm_version: "4.44.0"
 cert_manager_helm_version: 1.15.0
