--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -79,9 +79,12 @@ loki_ingester_max_chunk_age: 2h
 tempo_retention_period: 72h
 
 # monitoring/mimir
-mimir_max_global_series_per_user: "'5000000'"
-mimir_retention_period: "7d"
 mimir_max_label_names_per_series: "'35'"
+mimir_max_global_series_per_user: "'5000000'"
+mimir_ingestion_rate: "'200000'"
+mimir_ingestion_burst_size: "'500000'"
+
+mimir_retention_period: "7d"
 
 mimir_ingester_storage_size: "30Gi"
 mimir_compactor_storage_size: "30Gi"
