add replica count configs

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -84,7 +84,12 @@ mimir_max_global_series_per_user: "'5000000'"
 mimir_ingestion_rate: "'200000'"
 mimir_ingestion_burst_size: "'500000'"
 mimir_retention_period: "7d"
-
+distributor_replica_count: "'2'"
+ingester_replica_count: "'4'"
+querier_replica_count: "'2'"
+query_frontend_replica_count: "'1'"
+compactor_replica_count: "'1'"
+store_gateway_replica_count: "'3'"
 mimir_ingester_storage_size: "30Gi"
 mimir_compactor_storage_size: "30Gi"
 mimir_store_gateway_storage_size: "30Gi"
