--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -42,8 +42,8 @@ distributor:
   # resourcesPreset: large
   resources:
     limits:
-      cpu: 3
-      memory: 1024Mi
+      cpu: ${ARGOCD_ENV_mimir_distributor_limits_cpu}
+      memory: ${ARGOCD_ENV_mimir_distributor_limits_memory}
 
 ingester:
   replicaCount: ${ARGOCD_ENV_mimir_ingester_replica_count}
