--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -130,6 +130,10 @@ spec:
         - name: "mimir_store_gateway_storage_size"
           value: "${ARGOCD_ENV_monitoring_mimir_store_gateway_storage_size}"
 
+        - name: "mimir_distributor_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_mimir_distributor_limits_cpu}"
+        - name: "mimir_distributor_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_mimir_distributor_limits_memory}"
 
 
         - name: "cloudwatch_exporter_role_arn"
