add cpu and memory limits

--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -134,7 +134,26 @@ spec:
           value: "${ARGOCD_ENV_monitoring_mimir_distributor_limits_cpu}"
         - name: "mimir_distributor_limits_memory"
           value: "${ARGOCD_ENV_monitoring_mimir_distributor_limits_memory}"
-
+        - name: "mimir_ingester_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_mimir_ingester_limits_cpu}"
+        - name: "mimir_ingester_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_mimir_ingester_limits_memory}"
+        - name: "mimir_querier_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_mimir_querier_limits_cpu}"
+        - name: "mimir_querier_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_mimir_querier_limits_memory}"
+        - name: "mimir_query_frontend_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_mimir_query_frontend_limits_cpu}"
+        - name: "mimir_query_frontend_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_mimir_query_frontend_limits_memory}"
+        - name: "mimir_compactor_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_mimir_compactor_limits_cpu}"
+        - name: "mimir_compactor_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_mimir_compactor_limits_memory}"
+        - name: "mimir_store_gateway_limits_cpu"
+          value: "${ARGOCD_ENV_monitoring_mimir_store_gateway_limits_cpu}"
+        - name: "mimir_store_gateway_limits_memory"
+          value: "${ARGOCD_ENV_monitoring_mimir_store_gateway_limits_memory}"
 
         - name: "cloudwatch_exporter_role_arn"
           value: "${ARGOCD_ENV_monitoring_monitoring_cloudwatch_exporter_role_arn}"
