--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -46,7 +46,10 @@ distributor:
 
 ingester:
   replicaCount: ${ARGOCD_ENV_mimir_ingester_replica_count}
-  resourcesPreset: xlarge
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_mimir_ingester_limits_cpu}
+      memory: ${ARGOCD_ENV_mimir_ingester_limits_memory}
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
   persistence:
@@ -54,25 +57,37 @@ ingester:
 
 querier:
   replicaCount: ${ARGOCD_ENV_mimir_querier_replica_count}
-  resourcesPreset: xlarge
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_mimir_querier_limits_cpu}
+      memory: ${ARGOCD_ENV_mimir_querier_limits_memory}
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
 
 queryFrontend: 
   replicaCount: ${ARGOCD_ENV_mimir_query_frontend_replica_count}
-  resourcesPreset: large
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_mimir_query_frontend_limits_cpu}
+      memory: ${ARGOCD_ENV_mimir_query_frontend_limits_memory}
 
 compactor: 
   replicaCount: ${ARGOCD_ENV_mimir_compactor_replica_count}
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
-  resourcesPreset: xlarge
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_mimir_querier_limits_cpu}
+      memory: ${ARGOCD_ENV_mimir_querier_limits_memory}
   persistence:
     size: ${ARGOCD_ENV_mimir_compactor_storage_size}
 
 storeGateway: 
   replicaCount: ${ARGOCD_ENV_mimir_store_gateway_replica_count}
-  resourcesPreset: large
+  resources:
+    limits:
+      cpu: ${ARGOCD_ENV_mimir_querier_limits_cpu}
+      memory: ${ARGOCD_ENV_mimir_querier_limits_memory}
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
   persistence:
