--- a/gitops/applications/base/zitadel-pre/kustomization.yaml
+++ b/gitops/applications/base/zitadel-pre/kustomization.yaml
@@ -2,6 +2,22 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespaces.yaml
+  - zitadel-cert-job.yaml
   - zitadel-random-secrets.yaml
   - local-external-secrets-store.yaml
-  - zitadel-config-secrets.yaml
+
+helmCharts:
+  - name: cockroachdb
+    releaseName: zitadel-db
+    version: ${ARGOCD_ENV_cockroachdb_helm_version}
+    repo: https://charts.cockroachdb.com/
+    valuesFile: cockroach-db-values.yaml
+    namespace: ${ARGOCD_ENV_zitadel_namespace}
+
+patches:
+  - target:
+      kind: CronJob
+    patch: |
+      - op: replace
+        path: /apiVersion
+        value: batch/v1
