--- a/gitops/argo-apps/base/zitadel-pre.yaml
+++ b/gitops/argo-apps/base/zitadel-pre.yaml
@@ -29,190 +29,54 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: ${ARGOCD_ENV_security_app_namespace}
 
-  sources:
-    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
-      targetRevision: ${ARGOCD_ENV_security_application_gitrepo_tag}
-      path: gitops/applications/base/zitadel-pre
-      plugin:
-        name: envsubst
-        env:
-          - name: "zitadel_release_name"
-            value: "${ARGOCD_ENV_security_zitadel_app_name}"
+  source:
+    repoURL: ${ARGOCD_ENV_argocd_repo_url}
+    targetRevision: ${ARGOCD_ENV_security_application_gitrepo_tag}
+    path: gitops/applications/base/zitadel-pre
+    plugin:
+      name: envsubst
+      env:
+        - name: "zitadel_release_name"
+          value: "${ARGOCD_ENV_security_zitadel_app_name}"
 
-          - name: "zitadel_namespace"
-            value: "${ARGOCD_ENV_security_zitadel_namespace}"
+        - name: "zitadel_namespace"
+          value: "${ARGOCD_ENV_security_zitadel_namespace}"
 
-          - name: "zitadel_helm_version"
-            value: "${ARGOCD_ENV_security_zitadel_helm_version}"
+        - name: "zitadel_helm_version"
+          value: "${ARGOCD_ENV_security_zitadel_helm_version}"
 
-          - name: "zitadel_tf_provider_version"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_tf_provider_version}"
+        - name: "zitadel_tf_provider_version"
+          value: "${ARGOCD_ENV_security_zitadel_zitadel_tf_provider_version}"
 
-          - name: "terraform_modules_tag"
-            value: "${ARGOCD_ENV_security_zitadel_terraform_modules_tag}"
+        - name: "terraform_modules_tag"
+          value: "${ARGOCD_ENV_security_zitadel_terraform_modules_tag}"
 
-          - name: "vault_rbac_admin_group"
-            value: "${ARGOCD_ENV_security_zitadel_vault_rbac_admin_group}"
+        - name: "vault_rbac_admin_group"
+          value: "${ARGOCD_ENV_security_zitadel_vault_rbac_admin_group}"
 
-          - name: "zitadel_grant_prefix"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_grant_prefix}"
+        - name: "zitadel_grant_prefix"
+          value: "${ARGOCD_ENV_security_zitadel_zitadel_grant_prefix}"
 
-          - name: "zitadel_istio_gateway_namespace"
-            value: "${ARGOCD_ENV_security_zitadel_istio_gateway_namespace}"
+        - name: "cockroachdb_helm_version"
+          value: "${ARGOCD_ENV_security_cockroachdb_helm_version}"
 
-          - name: "zitadel_istio_wildcard_gateway_name"
-            value: "${ARGOCD_ENV_security_zitadel_istio_wildcard_gateway_name}"
+        - name: "cockroachdb_pvc_size"
+          value: "${ARGOCD_ENV_security_cockroachdb_pvc_size}"
 
-          - name: "zitadel_dns_subdomain"
-            value: "${ARGOCD_ENV_security_zitadel_dns_subdomain}"
+        - name: "cockroachdb_release_name"
+          value: "${ARGOCD_ENV_security_cockroachdb_app_name}"
 
-          - name: "zitadel_post_config_output_secret"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_post_config_output_secret}"
+        - name: "zitadel_istio_gateway_namespace"
+          value: "${ARGOCD_ENV_security_zitadel_istio_gateway_namespace}"
 
-          - name: "argocd_namespace"
-            value: "${ARGOCD_ENV_utils_argocd_helm_namespace}"
+        - name: "zitadel_istio_wildcard_gateway_name"
+          value: "${ARGOCD_ENV_security_zitadel_istio_wildcard_gateway_name}"
 
-          - name: "postgres_replicas"
-            value: "${ARGOCD_ENV_security_postgres_replicas}"
+        - name: "zitadel_dns_subdomain"
+          value: "${ARGOCD_ENV_security_zitadel_dns_subdomain}"
 
-          - name: "postgres_proxy_replicas"
-            value: "${ARGOCD_ENV_security_postgres_proxy_replicas}"
+        - name: "zitadel_post_config_output_secret"
+          value: "${ARGOCD_ENV_security_zitadel_zitadel_post_config_output_secret}"
 
-          - name: "postgres_storage_size"
-            value: "${ARGOCD_ENV_security_postgres_pvc_size}"
-
-          - name: "pgbouncer_storage_size"
-            value: "${ARGOCD_ENV_security_postgres_pgbouncer_pvc_size}"
-
-          - name: "pgdb_helm_version"
-            value: "${ARGOCD_ENV_security_postgres_pgdb_helm_version}"
-
-          - name: "zitadel_pg_db_release_name"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_pg_db_release_name}"
-
-          - name: "zitadel_db_secret_name"
-            value: "${ARGOCD_ENV_security_postgres_db_credentials_secret}"
-
-          - name: "zitadel_config_secret_name"
-            value: "${ARGOCD_ENV_security_zitadel_config_secret_name}"
-
-          - name: "zitadel_db_name"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_db_name}"
-
-          - name: "zitadel_db_user"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_db_user}"
-
-          - name: "vault_namespace"
-            value: "${ARGOCD_ENV_vault_vault_namespace}"
-
-          - name: "vault_k8s_admin_auth_path"
-            value: "${ARGOCD_ENV_vault_post_config_vault_k8s_admin_auth_path}"
-
-          - name: "vault_k8s_admin_role_name"
-            value: "${ARGOCD_ENV_vault_post_config_vault_k8s_admin_role_name}"
-
-          - name: zitadel_dbdeploy_name_prefix
-            value: "${ARGOCD_ENV_security_zitadel_dbdeploy_name_prefix}"
-
-
-    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
-      targetRevision: ${ARGOCD_ENV_security_application_gitrepo_tag}
-      path: gitops/applications/overlays/rdbms_provider/${ARGOCD_ENV_security_zitadel_rdbms_provider}/zitadel-pre
-      plugin:
-        name: envsubst
-        env:
-          - name: "zitadel_release_name"
-            value: "${ARGOCD_ENV_security_zitadel_app_name}"
-
-          - name: "zitadel_namespace"
-            value: "${ARGOCD_ENV_security_zitadel_namespace}"
-
-          - name: "zitadel_helm_version"
-            value: "${ARGOCD_ENV_security_zitadel_helm_version}"
-
-          - name: "zitadel_tf_provider_version"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_tf_provider_version}"
-
-          - name: "terraform_modules_tag"
-            value: "${ARGOCD_ENV_security_zitadel_terraform_modules_tag}"
-
-          - name: "vault_rbac_admin_group"
-            value: "${ARGOCD_ENV_security_zitadel_vault_rbac_admin_group}"
-
-          - name: "zitadel_grant_prefix"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_grant_prefix}"
-
-          - name: "zitadel_istio_gateway_namespace"
-            value: "${ARGOCD_ENV_security_zitadel_istio_gateway_namespace}"
-
-          - name: "zitadel_istio_wildcard_gateway_name"
-            value: "${ARGOCD_ENV_security_zitadel_istio_wildcard_gateway_name}"
-
-          - name: "zitadel_dns_subdomain"
-            value: "${ARGOCD_ENV_security_zitadel_dns_subdomain}"
-
-          - name: "zitadel_post_config_output_secret"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_post_config_output_secret}"
-
-          - name: "argocd_namespace"
-            value: "${ARGOCD_ENV_utils_argocd_helm_namespace}"
-
-          - name: "vault_namespace"
-            value: "${ARGOCD_ENV_vault_vault_namespace}"
-
-          - name: "vault_k8s_admin_auth_path"
-            value: "${ARGOCD_ENV_vault_post_config_vault_k8s_admin_auth_path}"
-
-          - name: "vault_k8s_admin_role_name"
-            value: "${ARGOCD_ENV_vault_post_config_vault_k8s_admin_role_name}"
-
-          - name: zitadel_dbdeploy_name_prefix
-            value: "${ARGOCD_ENV_security_zitadel_dbdeploy_name_prefix}"
-
-          - name: "postgres_replicas"
-            value: "${ARGOCD_ENV_security_postgres_replicas}"
-
-          - name: "postgres_proxy_replicas"
-            value: "${ARGOCD_ENV_security_postgres_proxy_replicas}"
-
-          - name: "postgres_storage_size"
-            value: "${ARGOCD_ENV_security_postgres_pvc_size}"
-
-          - name: "pgbouncer_storage_size"
-            value: "${ARGOCD_ENV_security_postgres_pgbouncer_pvc_size}"
-
-          - name: "pgdb_helm_version"
-            value: "${ARGOCD_ENV_security_postgres_pgdb_helm_version}"
-
-          - name: "zitadel_pg_db_release_name"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_pg_db_release_name}"
-
-          - name: "zitadel_db_secret_name"
-            value: "${ARGOCD_ENV_security_postgres_db_credentials_secret}"
-
-          - name: "zitadel_config_secret_name"
-            value: "${ARGOCD_ENV_security_zitadel_config_secret_name}"
-
-          - name: "zitadel_db_name"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_db_name}"
-
-          - name: "zitadel_db_user"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_db_user}"
-
-          - name: "cloud_region"
-            value: "${ARGOCD_ENV_security_zitadel_db_provider_cloud_region}"
-
-          - name: "rds_vpc_id"
-            value: "${ARGOCD_ENV_security_zitadel_rdbms_vpc_id}"
-
-          - name: "vpc_cidr"
-            value: "${ARGOCD_ENV_security_zitadel_vpc_cidr}"
-
-          - name: "rds_subnet_list"
-            value: "${ARGOCD_ENV_security_zitadel_rdbms_subnet_list}"
-
-          - name: "rds_postgres_instance_size"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_postgres_instance_size}"
-
-          - name: "rds_postgres_storage_size"
-            value: "${ARGOCD_ENV_security_zitadel_zitadel_postgres_storage_size}"
+        - name: "argocd_namespace"
+          value: "${ARGOCD_ENV_utils_argocd_helm_namespace}"
