--- a/terraform/k8s/default-config/cluster-config.yaml
+++ b/terraform/k8s/default-config/cluster-config.yaml
@@ -15,6 +15,8 @@ dns_zone_force_destroy: true
 longhorn_backup_object_store_destroy: true
 managed_svc_enabled: false
 addons_module_enabled: false
+enable_vault_oidc: true
+enable_grafana_oidc: true
 nodes:
   master-generic:
     master: true
