--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -47,7 +47,7 @@ resources:
   # # deploy-env
   # - ../../../base/deploy-env.yaml
   # # monitoring
-  # - ../../../base/monitoring-pre.yaml
+  - ../../../base/monitoring-pre.yaml
   # - ../../../base/monitoring.yaml
   # - ../../../base/monitoring-post-config.yaml
   # # k8s
