--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -76,6 +76,10 @@ loki_ingester_max_chunk_age: 2h
 tempo_retention_period: 72h
 
 # monitoring/mimir
+mimir_bucket_name: "mimir-bucket"
+mimir_bucket_max_objects: "'1000000'"
+mimir_bucket_storage_size: "60Gi"
+
 mimir_max_label_names_per_series: "'35'"
 mimir_max_global_series_per_user: "'5000000'"
 mimir_ingestion_rate: "'200000'"
