rename instance in node exporter

--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -46,6 +46,10 @@ node-exporter:
     relabelings:
       - sourceLabels: [__meta_kubernetes_pod_node_name]
         targetLabel: nodename
+    metricRelabelings:
+      - sourceLabels: [nodename]
+        targetLabel: instance
+
   tolerations:
     - operator: "Exists"
 blackboxExporter:
