add action replace

--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -48,6 +48,7 @@ node-exporter:
         targetLabel: nodename
       - sourceLabels: [nodename]
         targetLabel: instance
+        action: replace
 
   tolerations:
     - operator: "Exists"
