--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -47,9 +47,11 @@ node-exporter:
       - sourceLabels: [__meta_kubernetes_pod_node_name]
         targetLabel: nodename
       - sourceLabels: [nodename]
+        separator: ;
+        regex: (.*)
         targetLabel: instance
+        replacement: "${1}"
         action: replace
-
   tolerations:
     - operator: "Exists"
 blackboxExporter:
