--- a/gitops/applications/base/gitlab/kustomization.yaml
+++ b/gitops/applications/base/gitlab/kustomization.yaml
@@ -18,6 +18,20 @@ patches:
       group: apps
       version: v1
       kind: Deployment
+      name: gitlab-gitlab-runner
+    patch: |
+      - op: add
+        path: /spec/template/spec/dnsConfig
+        value: 
+          options:
+            - name: ndots
+              value: "3"
+            - name: attempts
+              value: "5"
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
       name: gitlab-toolbox
     patch: |
       - op: add
