use ext dns istio gw source instead of vs

--- a/gitops/applications/overlays/cloud_provider/aws/dns-utils/ext-dns-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/dns-utils/ext-dns-values.yaml
@@ -10,7 +10,7 @@ txtPrefix: extdns
 sources:
   - service
   - ingress
-  - istio-virtualservice
+  - istio-gateway
 logLevel: debug
 provider: aws
 aws:
