--- a/gitops/applications/base/zitadel-pre/kustomization.yaml
+++ b/gitops/applications/base/zitadel-pre/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespaces.yaml
+  - virtual-services.yaml
   - zitadel-cert-job.yaml
   - zitadel-random-secrets.yaml
   - local-external-secrets-store.yaml
