--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -32,7 +32,7 @@ resources:
   - ../../../base/maintenance-pre.yaml
   # security
   - ../../../base/zitadel-pre.yaml
-  - ../../../base/zitadel.yaml
+  - ../../../base/zitadel-helm.yaml
   - ../../../base/zitadel-post-config.yaml
   - ../../../base/netbird-pre.yaml
   - ../../../base/netbird.yaml
