--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -16,6 +16,7 @@ zitadel_helm_version: "8.5.0"
 cockroachdb_helm_version: "13.0.2"
 netbird_helm_version: "1.5.1"
 netbird_image_version: "0.30.2"
+netbird_client_version: "0.28.9"
 netbird_dashboard_image_version: "v2.6.1"
 stunner_gateway_operator_helm_version: "0.19.0"
 nexus_helm_version: "4.44.0"
