--- a/gitops/argo-apps/base/monitoring-post-config.yaml
+++ b/gitops/argo-apps/base/monitoring-post-config.yaml
@@ -31,8 +31,7 @@ spec:
 
   source:
     repoURL: ${ARGOCD_ENV_argocd_repo_url}
-    # targetRevision: ${ARGOCD_ENV_monitoring_application_gitrepo_tag}
-    targetRevision: development-cto2.3
+    targetRevision: ${ARGOCD_ENV_monitoring_application_gitrepo_tag}
     path: gitops/applications/base/monitoring-post-config
     plugin:
       name: envsubst
