--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -57,8 +57,7 @@ spec:
 
   source:
     repoURL: ${ARGOCD_ENV_argocd_repo_url}
-    # targetRevision: ${ARGOCD_ENV_monitoring_application_gitrepo_tag}
-    targetRevision: development-cto2.3
+    targetRevision: ${ARGOCD_ENV_monitoring_application_gitrepo_tag}
     path: gitops/applications/base/monitoring
     plugin:
       name: envsubst
@@ -87,7 +86,7 @@ spec:
           value: "${ARGOCD_ENV_monitoring_prometheus_remote_write_tenant_id}"
         - name: "cluster_label_value"
           value: "${ARGOCD_ENV_monitoring_prometheus_cluster_label_value}"
-          
+
         - name: "mimir_bucket_name"
           value: "${ARGOCD_ENV_monitoring_pre_mimir_bucket_name}"
         - name: "mimir_max_global_series_per_user"
@@ -157,4 +156,3 @@ spec:
 
         - name: "cloudwatch_exporter_role_arn"
           value: "${ARGOCD_ENV_monitoring_monitoring_cloudwatch_exporter_role_arn}"
-          
