add appset metrics

--- a/gitops/argo-apps/base/argocd-helm.yaml
+++ b/gitops/argo-apps/base/argocd-helm.yaml
@@ -54,7 +54,8 @@ spec:
               format: json
 
           applicationSet:
-            enabled: false
+            metrics:
+              enabled: true
           notifications:
             enabled: false
           configs:
