--- a/gitops/applications/base/monitoring-post-config/argocd-service-monitors.yaml
+++ b/gitops/applications/base/monitoring-post-config/argocd-service-monitors.yaml
@@ -37,17 +37,30 @@ spec:
   endpoints:
     - port: http-metrics
 ---
-# apiVersion: monitoring.coreos.com/v1
-# kind: ServiceMonitor
-# metadata:
-#   name: argocd-applicationset-controller-metrics
-# spec:
-#   namespaceSelector:
-#     any: true
-#   selector:
-#     matchLabels:
-#       app.kubernetes.io/name: argocd-application-controller-metrics
-#   endpoints:
-#     - port: http-metrics
-# ---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: argocd-application-controller-metrics
+spec:
+  namespaceSelector:
+    any: true
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: argocd-application-controller-metrics
+  endpoints:
+    - port: http-metrics
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: argocd-applicationset-controller-metrics
+spec:
+  namespaceSelector:
+    any: true
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: argocd-applicationset-controller-metrics
+  endpoints:
+    - port: http-metrics
+---
 
