--- a/gitops/applications/base/monitoring-post-config/argocd-service-monitors.yaml
+++ b/gitops/applications/base/monitoring-post-config/argocd-service-monitors.yaml
@@ -1,16 +1,16 @@
-# apiVersion: monitoring.coreos.com/v1
-# kind: ServiceMonitor
-# metadata:
-#   name: argocd-metrics
-# spec:
-#   namespaceSelector:
-#     any: true
-#   selector:
-#     matchLabels:
-#       app.kubernetes.io/name: argocd-metrics
-#   endpoints:
-#     - port: metrics
-# ---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: argocd-metrics
+spec:
+  namespaceSelector:
+    any: true
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: argocd-metrics
+  endpoints:
+    - port: http-metrics
+---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -34,19 +34,6 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: argocd-repo-server-metrics
-  endpoints:
-    - port: http-metrics
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: argocd-application-controller-metrics
-spec:
-  namespaceSelector:
-    any: true
-  selector:
-    matchLabels:
-      app.kubernetes.io/name: argocd-application-controller-metrics
   endpoints:
     - port: http-metrics
 ---
