add 3in1 service monitor for argocd

--- a/gitops/applications/base/monitoring-post-config/argocd-service-monitors.yaml
+++ b/gitops/applications/base/monitoring-post-config/argocd-service-monitors.yaml
@@ -37,4 +37,21 @@ spec:
   endpoints:
     - port: http-metrics
 ---
-
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: argocd-metrics
+spec:
+  namespaceSelector:
+    any: true
+  selector:
+    matchExpressions:
+    - key: app.kubernetes.io/name
+      operator: In
+      values: 
+      - argocd-metrics
+      - argocd-server-metrics
+      - argocd-repo-server-metrics
+  endpoints:
+    - port: http-metrics
+---
