add back monitoring-post-config

--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -50,6 +50,6 @@ resources:
   # monitoring
   - ../../../base/monitoring-pre.yaml
   - ../../../base/monitoring.yaml
-  # - ../../../base/monitoring-post-config.yaml
+  - ../../../base/monitoring-post-config.yaml
   # k8s
   - ../../../base/k8s-post-config.yaml
