--- a/gitops/applications/base/monitoring-post-config/dashboards-infra.yaml
+++ b/gitops/applications/base/monitoring-post-config/dashboards-infra.yaml
@@ -24,7 +24,7 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
-  name: "ArgoCD / Operational / Overview"
+  name: "ArgoCD - Operational - Overview"
 spec:
   folder: infra
   datasources:
