--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -14,7 +14,8 @@ crossplane_helm_version: "1.16.0"
 kubernetes_secret_generator_helm_version: "3.4.0"
 zitadel_helm_version: "8.5.0"
 cockroachdb_helm_version: "13.0.2"
-netbird_helm_version: "1.5.1"
+netbird_helm_version: "1.0.2"
+netbird_dashboard_helm_version: "1.0.0"
 netbird_image_version: "0.28.6"
 netbird_client_version: "0.28.6"
 netbird_dashboard_image_version: "v2.6.1"
