set reposerver.enable.git.submodule: "false"

--- a/gitops/argo-apps/base/argocd-helm.yaml
+++ b/gitops/argo-apps/base/argocd-helm.yaml
@@ -426,6 +426,7 @@ spec:
               server.insecure: true
               # Mandatory for extensions to work
               server.enable.proxy.extension: "true"
+              reposerver.enable.git.submodule: "false"
 
             cmp:
               create: true
