--- a/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
@@ -76,6 +76,26 @@ central-ledger-db:
       mojaloop/env: ft-sbox-rw
       mojaloop/owner: Samuel-Kummary
     username: central_ledger
+cep-mongodb:
+  external_resource_config:
+    cluster_size: 3
+    master_username: admin
+    password_key_name: cep_mongodb_password
+    instance_class: db.t3.medium
+    db_port: 27017
+    apply_immediately: false
+    auto_minor_version_upgrade: false
+    snapshot_identifier: ""
+    retention_period: 1d
+    preferred_backup_window: 01:00-04:00
+    preferred_maintenance_window: Sun:04:00-Sun:06:00
+    cluster_parameters: []
+    cluster_family: docdb5.0
+    engine: mongodb
+    engine_version: 5.0.0 
+    storage_encrypted: false
+    skip_final_snapshot: true
+    enabled_cloudwatch_logs_exports: false
 mojaloop-kafka:
   external_resource_config:
     name: msk
