--- a/gitops/argo-apps/base/rook-ceph.yaml
+++ b/gitops/argo-apps/base/rook-ceph.yaml
@@ -50,7 +50,7 @@ spec:
               cpu: 50m
               memory: 64Mi
 
-    - repoURL: https://charts.rook.io/release
+    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_utils_rook_ceph_cloud_platform}/rook-ceph
       plugin:
         name: envsubst
