--- a/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
@@ -86,7 +86,7 @@ reporting-events-mongodb:
     apply_immediately: false
     auto_minor_version_upgrade: false
     snapshot_identifier: ""
-    retention_period: 1d
+    retention_period: 1
     preferred_backup_window: 01:00-04:00
     preferred_maintenance_window: Sun:04:00-Sun:06:00
     cluster_parameters: []
@@ -95,7 +95,7 @@ reporting-events-mongodb:
     engine_version: 5.0.0 
     storage_encrypted: false
     skip_final_snapshot: true
-    enabled_cloudwatch_logs_exports: false
+    enabled_cloudwatch_logs_exports: []
 mojaloop-kafka:
   external_resource_config:
     name: msk
