--- a/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
@@ -79,8 +79,9 @@ central-ledger-db:
 reporting-events-mongodb:
   external_resource_config:
     cluster_size: 3
-    master_username: admin
+    master_username: app_owner
     password_key_name: reporting_events_mongodb_password
+    instance_address_key_name: reporting_events_mongodb_address
     instance_class: db.t3.medium
     db_port: 27017
     apply_immediately: false
@@ -91,9 +92,9 @@ reporting-events-mongodb:
     preferred_maintenance_window: Sun:04:00-Sun:06:00
     cluster_parameters: []
     cluster_family: docdb5.0
-    engine: mongodb
+    engine: docdb
     engine_version: 5.0.0 
-    storage_encrypted: false
+    storage_encrypted: true
     skip_final_snapshot: true
     enabled_cloudwatch_logs_exports: []
 mojaloop-kafka:
