--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/kustomization.yaml
@@ -2,6 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
+  - name: aws-ebs-csi-driver
+    releaseName: aws-ebs-csi-driver
+    repo: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
+    namespace: kube-system
+
   - name: rook-ceph-cluster
     releaseName: rook-ceph-cluster
     version: ${ARGOCD_ENV_rook_ceph_helm_version}
