--- a/gitops/argo-apps/base/rook-ceph.yaml
+++ b/gitops/argo-apps/base/rook-ceph.yaml
@@ -62,6 +62,9 @@ spec:
           - name: "rook_ceph_helm_version"
             value: "${ARGOCD_ENV_utils_rook_ceph_helm_version}"
 
+          - name: "ceph_osd_number"
+            value: "${ARGOCD_ENV_utils_rook_ceph_osd_number}"
+
           - name: "ceph_mon_volumes_storage_class"
             value: "${ARGOCD_ENV_utils_rook_ceph_mon_volumes_storage_class}"
           
