--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -171,7 +171,7 @@ zitadel_db_storage_iops: "'5000'" # rds specific
 
 # rook ceph
 rook_ceph_helm_version: "1.14.5"
-rook_ceph_osd_number: "4"
+rook_ceph_osd_count: "4"
 rook_ceph_mon_volumes_storage_class: "gp3"
 rook_ceph_mon_volumes_size: "10Gi"
 rook_ceph_osd_volumes_storage_class: "gp3" #io1
